--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,31 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
+#This is a configuration file for CI integration using circle CI
 version: 2
 jobs:
   build:
+    working_directory: ~/code
     docker:
-      # specify the version you desire here
       - image: circleci/android:api-25-alpha
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
     environment:
-      # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
-      TERM: dumb
-    
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.gradle" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: gradle dependencies
-
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+       #This downloads all the dependencies specified in the build gradle file from jcenter(), google() you name it
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+       #Caching can significantly decrease the build time and reduce the limited build time credits from exhaustion
       - save_cache:
           paths:
             - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
-        
-      # run tests!
-      - run: gradle test
-
-
-
-
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+        #This runs all the Unit Test
+      - run:
+          name: Build Project
+          command: ./gradlew build
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+path: app/build/test-results
