[Updated] config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/repo
+    working_directory: ~/project
     docker:
       - image: circleci/android:api-25-alpha
     environment:
