--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
         #This runs all the Unit Test
       - run:
           name: Build Project
-          command: ./gradlew build
+          command: export TERM=xterm && ./gradlew build
